# Realtime-Photometric-Stereo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: calibration.cpp  calibration.h  cam_init_reg.h  camera.cpp  camera.h  camerawidget.cpp  camerawidget.h  config.h.in  main.cpp  mainwindow.cpp  mainwindow.h  modelwidget.cpp  modelwidget.h  normalswidget.cpp  normalswidget.h  oclutils.cpp  oclutils.h  photometricstereo.cpp  photometricstereo.h  pio_dir_reg.h  ps.cl  strobe_reg.h  utils.cpp  utils.h
